# proxy

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.build  README.md  install.sh
.github/workflows/: ci.yml
resources/: config.dovecot-postfix.toml  config.sample.toml  config.stalwart-upgrade.toml  dovecot-postfix-trust.conf  migrate_v015_to_plan.py
src/: admin.rs  error.rs  imap_receiver.rs  main.rs  observe.rs  outbound.rs  sasl.rs  server.rs  token.rs
src/config/: duration.rs  mod.rs
src/http/: head.rs  mod.rs  proxy.rs  router.rs
src/net/: acceptor.rs  cidr.rs  mod.rs  proxy_protocol.rs  stream.rs  tls.rs
src/proto/: common.rs  forward.rs  imap.rs  managesieve.rs  mod.rs  pop3.rs  smtp.rs
src/route/: mod.rs
src/route/store/: file.rs  mod.rs  redis.rs  sql.rs
src/tests/: admin.rs  config_validation.rs  forwarding.rs  harness.rs  http_proxy.rs  imap.rs  managesieve.rs  mod.rs  pop3.rs  proxy_protocol.rs  redis_store.rs  routing.rs  smtp.rs  sql_store.rs
src/tests/containers/: clients.rs  http.rs  jmap.rs  legacy.rs  limits.rs  master_user_and_load.rs  mod.rs  oauth.rs  scenario1.rs  scenario2.rs  stalwart.rs  toolbox.rs  toolbox_http.rs  toolbox_matrix.rs
